<?xml version="1.0" encoding="utf-8"?>
<!--
     Chris Bowles - 2/10/13
     SS12 Coding Competition 2013 Project
     game_activity.xml
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity" >

    <TextView
        android:id="@+id/gameTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/one_player"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/gameTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/memorize"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/gameImageView0"
        android:layout_width="80sp"
        android:layout_height="40sp"
        android:layout_below="@+id/gameTextView2"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image"
        android:src="@drawable/empty" />

    <TextView
        android:id="@+id/gameTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameImageView0"
        android:layout_toLeftOf="@+id/gameTextView4"
        android:gravity="right"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/gameTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameImageView0"
        android:layout_centerHorizontal="true"
        android:text="@string/slash"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/gameTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameImageView0"
        android:layout_toRightOf="@+id/gameTextView4"
        android:gravity="left"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/gameImageView1"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:contentDescription="@string/image"
                android:src="@drawable/image5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/gameImageView2"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:contentDescription="@string/image"
                android:src="@drawable/image6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/gameImageView3"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:contentDescription="@string/image"
                android:src="@drawable/image7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/gameImageView4"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:contentDescription="@string/image"
                android:src="@drawable/image8" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>